--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             <label id="input-file-label" class="order-editing__input-file-label" for="input-file"><span>завантажте
                 файл</span></label>
             <textarea id="textarea" class="order-editing__input order-editing__textarea" name="enter-text"
-              id="enter-text" cols="30" rows="15" placeholder="Введіть текст або"></textarea>
+              cols="30" rows="15" placeholder="Введіть текст або"></textarea>
               <span id="text-length"></span>
           </div>
           <div class="order-editing__wrap-radio" id="wrap-radio">
