--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./img/favicon.ico" type="image/icon">
-  <title>Corect</title>
+  <title>Редагування текстів онлайн</title>
 </head>
 
 <body>
